# introduction-to-glm

./: README.md  main.py  pyproject.toml  requirements.txt  sample.py
.github/: pull_request_template.md
第10章/: 演習問題.ipynb  第10章_寛解持続期間.ipynb
第10章/.ipynb_checkpoints/: 第10章_寛解持続期間-checkpoint.ipynb
第11章/完了/: 脳卒中発作からの回復過程.ipynb
第11章/完了/.ipynb_checkpoints/: 脳卒中発作からの回復過程-checkpoint.ipynb
第11章/未完了/: GEEの実装.ipynb  GEEの実装_スクラッチ.ipynb  Untitled.ipynb  dog_data_long_format.csv  gee.py  演習問題.ipynb
第1章/: 演習問題1-6.ipynb
第2章/: 演習問題.ipynb  演習問題2-2.ipynb
第2章/.ipynb_checkpoints/: 演習問題-checkpoint.ipynb
第3章/: 演習問題3-5.ipynb
第4章/: 演習問題4.1.ipynb  演習問題4.2.ipynb
第4章/.ipynb_checkpoints/: 演習問題4.1-checkpoint.ipynb
第5章/: 演習問題5-4.ipynb  演習問題5_3.ipynb
第6章/: 6-4分散分析.ipynb  演習問題.ipynb  演習問題6.7.ipynb  演習問題6_4.ipynb  演習問題6_5.ipynb  演習問題6_6.ipynb  演習問題6_7.ipynb  演習問題6_8.ipynb  第6章正規線形回帰モデル.ipynb
第6章/.ipynb_checkpoints/: 6-4分散分析-checkpoint.ipynb  演習問題6.7-checkpoint.ipynb  第6章正規線形回帰モデル-checkpoint.ipynb
第7章/: test.md  演習問題7.ipynb  第7章2値変数とロジスティック回帰.ipynb
第7章/.ipynb_checkpoints/: 第7章2値変数とロジスティック回帰-checkpoint.ipynb
第8章/: Untitled.ipynb  dobson.py  exercise_8_2.py  mlogit.py  第8章名義および順序ロジスティック回帰.ipynb
第8章/.ipynb_checkpoints/: mlogit-checkpoint.py  演習問題-checkpoint.ipynb  第8章名義および順序ロジスティック回帰-checkpoint.ipynb
第9章/: 演習問題.ipynb
第9章/.ipynb_checkpoints/: 演習問題-checkpoint.ipynb
第9章/完了/: 第9章悪性黒色腫に関する横断研究-Copy1.ipynb  第9章悪性黒色腫に関する横断研究.ipynb  第9章計数データポアソン回帰および対数線形モデル-Copy1.ipynb  第9章計数データポアソン回帰および対数線形モデル.ipynb
第9章/未完了/: 表9.11の再現.ipynb
(+8 files in other folders)
