[project]
name = "introduction-to-glm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "jupyter>=1.1.1",
    "jupyterlab>=3.6.8",
    "lightgbm>=4.6.0",
    "matplotlib>=3.5.3",
    "mlflow>=1.30.1",
    "mypy>=1.19.0",
    "numpy>=1.21.6",
    "openpyxl>=3.1.3",
    "pandas>=1.1.5",
    "plotly>=5.18.0",
    "pytest>=7.4.4",
    "ruff>=0.14.8",
    "scikit-learn>=1.0.2",
    "seaborn>=0.12.2",
    "statsmodels>=0.13.5",
    "tqdm>=4.67.1",
    "xlrd>=2.0.2",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "W"
]

fixable = ["E","F","I"]
unfixable = ["W"]

[tool.mypy]
python_version = "3.12"
warn_unreachable = true
disallow_untyped_defs = true
ignore_missing_imports = true
pretty = true
show_error_context = true
    